Fixed box-sizing glitch that was causing webvr buttons to be invisible

--- a/app/assets/sass/partials/core/_base.scss
+++ b/app/assets/sass/partials/core/_base.scss
@@ -27,209 +27,10 @@ body {
   overflow: hidden;
 }
 
-
-//----------------------------------------------------------------------------------------------------------------------
-// ANCHORS/LINKS
-//----------------------------------------------------------------------------------------------------------------------
-
-a {
-
-}
-
-a:hover,
-a:focus,
-a:active {
-
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// BUTTONS
-//----------------------------------------------------------------------------------------------------------------------
-
-button {
-
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// HEADERS
-//----------------------------------------------------------------------------------------------------------------------
-
-h1, h2, h3, h4, h5, h6 {
-
-}
-
-h1 {
-
-}
-
-h2 {
-
-}
-
-h3 {
-
-}
-
-h4 {
-
-}
-
-h5 {
-
-}
-
-h6 {
-
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// INLINE
-//----------------------------------------------------------------------------------------------------------------------
-
-small {
-
-}
-
-acronym, abbr {
-
-}
-
-ins, mark {
-
-}
-
-pre, code, kbd, samp, tt {
-
-}
-
-code, kbd, samp, tt {
-
-}
-
-var {
-
-}
-
-img, video, object {
-
-}
-
-figure {
-  p {
-
-  }
-  figcaption {
-
-  }
-}
-
-hr {
-
-}
-
-span {
-
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// BLOCK
-//----------------------------------------------------------------------------------------------------------------------
-
-blockquote {
-
-}
-
-pre {
-  code {
-
-  }
-}
-
-p {
-
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// LISTS
-//----------------------------------------------------------------------------------------------------------------------
-
-ul {
-  li {
-
-  }
-}
-
-ol {
-  li {
-
-  }
-}
-
-dt {
-  dl {
-
-  }
-}
-
-//----------------------------------------------------------------------------------------------------------------------
-// TABLES
-//----------------------------------------------------------------------------------------------------------------------
-
-table {
-  tr {
-
-  }
-  th, td {
-
-  }
-  thead, th {
-
-  }
-  td {
-
-  }
-}
-
-
-//----------------------------------------------------------------------------------------------------------------------
-// FORMS
-//----------------------------------------------------------------------------------------------------------------------
-
-form {
-  input,
-  select,
-  textarea {
-
-  }
-  select {
-
-  }
-  textarea {
-
-  }
-  input[type="text"],
-  input[type="search"],
-  input[type="tel"],
-  input[type="url"],
-  input[type="email"],
-  input[type="password"],
-  input[type="datetime"],
-  input[type="datetime-local"],
-  input[type="date"],
-  input[type="month"],
-  input[type="week"],
-  input[type="time"],
-  input[type="number"],
-  select[multiple],
-  textarea {
-
-  }
-  legend, h1, h2, h3, h4 {
-
+img {
+
+  // 'box-sizing: inherit' makes the webvr-buttons invisible
+  &, &:after, &:before {
+    box-sizing: content-box !important;
   }
 }
